<resources>
    <string name="app_name">DYCard</string>
    <string name="logo">Logo</string>
    <string name="buttonPrecedent">Back</string>
    <string name="buttonSuivant">Next</string>
    <string name="connexion">To log in</string>
    <string name="inscription">Sign in</string>
    <string name="connexionFacebook">Sign in with Facebook</string>
    <string name="cg">Term of use</string>
    <string name="pseudo">Username</string>
    <string name="mdp">Password</string>
    <string name="mdpConfirm">Retype password</string>
    <string name="email">E-mail</string>
    <string name="mdpDifferents">Passwords are different.</string>
    <string name="inscriptionSucces">Successful registration!</string>
    <string name="inscriptionEchec">The username or e-mail is already used.</string>
    <string name="erreurFormulaire">An error has occurred.</string>
    <string name="champsVides">Please fill in all fields.</string>
    <string name="erreurLogin">Connection error</string>
    <string name="connectionReussie">Successful connection!</string>
    <string name="erreur">Wrong login </string>
    <string name="mdp_oublie">Forgot your password</string>
    <string name="recupMdp">Password recovery</string>
    <string name="Valider">Confirm</string>
    <string name="etape1_bienvenue">Welcome !</string>
    <string name="etape1_instructions">The steps to create your postcard : </string>
    <string name="etape1_instruction1">Choose the format for your postcard</string>
    <string name="etape1_instruction2">Choose the photo and format for your postcard
        The photo will cover the whole of your postcard
    </string>
    <string name="etape1_instruction3">Write your message on the back of the postcard</string>
    <string name="etape1_instruction4">Indicate this(these) recipient(s)
        Saving a recipient is possible
    </string>
    <string name="etape1_instruction5">Validate your order</string>
    <string name="etape1_instruction6">Pay</string>
    <string name="etape1_btn_creer">Create my postcard</string>
    <string name="etape1_enveloppe">*Your postcard will be sent in an envelope</string>
    <string name="choisir_photo">Choose your photo</string>
    <string name="importerImage">Import photo</string>
    <string name="format">Choose the format of the postcard : </string>
    <string name="format1">Polaroid</string>
    <string name="format2">A6</string>
    <string name="format3">A4</string>
    <string name="alerteFormat">Please select a format</string>
    <string name="valider">OK</string>
    <string name="alertePhoto">Please select a photo</string>
    <string name="oui">OK</string>
    <string name="choisir_forme">Choose your form</string>
    <string name="modifier_photo">Update your photo</string>
    <string name="ecris_ton_texte">Write your message</string>
    <string name="zoomer">Zoom in</string>
    <string name="dezoomer">Zoom out</string>
    <string name="supprimer_destinataire">Delete this(these) recipient(s)</string>
    <string name="envoyer_ma_carte_ces_destinataires">envoyer carte aux destinataires</string>
    <string name="supprimer_ces_destinataires_de_mes_historiques">supprimer destinataires</string>
    <string name="prix_commande">The price for your order is :</string>
    <string name="envoyer_destinataires">Send my postcard</string>
    <string name="selectionne_les_destinataires">Select a recipient(s)</string>
    <string name="ajouter_nouveau_destinataire">Add a new recipient</string>
    <string name="chargementDest">Loading recipient...</string>
    <string name="buttonDestinataire">Add this recipient </string>
    <string name="nom">Last name</string>
    <string name="prenom">First name</string>
    <string name="adresse">Address</string>
    <string name="codepostal">Postal Code</string>
    <string name="ville">City</string>
    <string name="pays">Country</string>
    <string name="alerteDestinataire">Please fill in all fields</string>
    <string name="ajoutDestSucces">Recipient added </string>
    <string name="ajoutDestEchec">A recipient already exists for this address </string>
    <string name="ajout_destinataire">Add a recipient</string>
    <string name="popupDestinataire">Please select at least one recipient</string>
    <string name="ok">Ok</string>
    <string name="popupSupprimerDestinataire">Are you sure to delete this(these) recipient(s)?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="validation">Validation</string>
    <string name="face_avant">Front of the postcard</string>
    <string name="face_arriere">Back of the postcard</string>
    <string name="parametres">Settings</string>
    <string name="destinataire">Recipient(s)</string>
    <string name="modifier">Edit</string>
    <string name="paiement">Payment method</string>
    <string name="erreurConnexion">Check your Internet connection</string>
</resources>