<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_etape1_"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.simon.dycard.activities.Etape1_Activity"
    android:weightSum="1"
    android:background="@color/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/etape1_bienvenue"
        android:gravity="center"
        android:textSize="20dp"
        android:textStyle="bold"
        android:fontFamily="casual"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/etape1_instructions"
        android:textSize="20dp"
        android:fontFamily="casual"
        android:textStyle="bold"/>

    <CheckBox
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/etape1_instruction1"
        android:checked="true"
        android:enabled="false"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/etape1_instruction2"
        android:checked="true"
        android:enabled="false"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/etape1_instruction3"
        android:checked="true"
        android:enabled="false"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/etape1_instruction4"
        android:checked="true"
        android:enabled="false"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/etape1_instruction5"
        android:checked="true"
        android:enabled="false"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/etape1_instruction6"
        android:checked="true"
        android:enabled="false"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/etape1_btn_creer"
        android:layout_gravity="center"
        android:onClick="creerCarte"
        style="@style/bouton"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/etape1_enveloppe"
        android:layout_gravity="center"/>



</LinearLayout>
</ScrollView>