<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:weightSum="1"
        tools:context="com.example.simon.dycard.activities.activity_shape_photo"
        android:background="@color/background">


        <ProgressBar
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyleHorizontal"
            android:progress="32"
            android:max="100"/>

        <TextView
            android:text="@string/modifier_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20dp"
            android:textStyle="bold"
            android:fontFamily="casual"
            android:id="@+id/textView4"/>

        <!-- Image Cropper fill the remaining available height -->
       <com.theartofdev.edmodo.cropper.CropImageView
            android:id="@+id/cropImageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

       <com.github.siyamed.shapeimageview.mask.PorterShapeImageView
            android:id="@+id/photo"
            app:siShape="@drawable/shape_rounded_rectangle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:text="@string/buttonPrecedent"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:onClick="precedentActivityPhoto"
                style="@style/boutonPrecedent"/>

            <Space
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_width="181dp" />

            <Button
                android:text="@string/buttonSuivant"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:onClick="suivantActivityTexte"
                style="@style/boutonSuivant"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>