<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.simon.dycard.activities.activity_destinataire">

    <ProgressBar
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleHorizontal"
        android:progress="70"
        android:max="100"
        android:secondaryProgress="80"/>

    <TextView
        android:text="@string/selectionne_les_destinataires"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textSize="20dp"
        android:layout_gravity="center"/>

    <Button
        android:text="ajouter un nouveau destinataire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:layout_gravity="center"
        android:onClick="ajouterUnNouveauDestinataire"
        style="@style/bouton" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:text="Le prix de ta carte est :"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView5" />
    <Button
        android:text="@string/envoyer_ma_carte_ces_destinataires"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/button"
        android:onClick="envoyerDestinataire"
        style="@style/bouton" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:text="@string/buttonPrecedent"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:layout_weight="0.50"
            android:id="@+id/button2"
            android:onClick="precedent"
            style="@style/boutonPrecedent"/>


        <Button
            android:text="Suivant"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:layout_weight="0.50"
            android:onClick="suivantActivityDestinataire"
            style="@style/boutonSuivant"/>

    </LinearLayout>



    <!--<SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/seekBar2"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/button3"
        android:layout_marginStart="65dp"
        android:layout_marginTop="34dp"
        android:id="@+id/progressBar" />-->




</LinearLayout>
