<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_images_"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.simon.dycard.activities.Images_Activity"
    android:background="@color/background">
//une id pour y avoir accès  cette vue
    <ListView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:id="@+id/activity_list"
        android:layout_height="match_parent"/>


    <ProgressBar
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleHorizontal"
        android:progress="16"
        android:max="100"/>

    <TextView
        android:text="@string/choisir_forme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="casual"
        android:textSize="20dp"
        android:textStyle="bold"
        android:id="@+id/textView4" />

      <ImageButton
          android:id="@+id/button1"
          android:layout_width="500dp"
          android:layout_height="500dp"
          android:layout_gravity="center"
          android:src="@drawable/cadreplantes"
          android:background="@drawable/my_selector"
          />
   <!--android:background="@drawable/cadreplantes"-->
    <!-- android:onClick="cadreplantes" -->

    <ImageButton
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:background="@drawable/chat"
        android:onClick="chat"/>

    <ImageButton
        android:id="@+id/ib1"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:background="@drawable/ovale"
        android:onClick="ovale"/>

    <ImageButton
        android:layout_width="200dp"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:background="@drawable/diamant"
        android:onClick="diamant"/>


    <ImageButton
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:background="@drawable/etoile"
        android:onClick="etoile"/>


    <ImageButton
        android:layout_width="616dp"
        android:layout_height="133dp"
        android:layout_gravity="center"
        android:background="@drawable/coeur"
        android:onClick="coeur"/>


    <ImageButton
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:background="@drawable/octo"
        android:onClick="octo"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:text="@string/buttonPrecedent"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:onClick="imagePrecedent"
            style="@style/boutonPrecedent"/>

        <Space
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_width="181dp" />

        <Button
            android:text="@string/buttonSuivant"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:onClick="imageSuivant"
            style="@style/boutonSuivant"/>

    </LinearLayout>

</LinearLayout>
</ScrollView>